리뷰 부분 수정

--- a/ShoppingMall.html
+++ b/ShoppingMall.html
@@ -27,7 +27,7 @@
     <!-- 제일 상단의 Nav -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="index.png" /></a>
+        <a class="navbar-brand" href="#"><img src="images/index.png" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -485,16 +485,16 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="1.jpg" class="d-block w-100" alt="..." />
+          <img src="images/1.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="2.jpg" class="d-block w-100" alt="..." />
+          <img src="images/2.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="3.jpg" class="d-block w-100" alt="..." />
+          <img src="images/3.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="4.jpg" class="d-block w-100" alt="..." />
+          <img src="images/4.jpg" class="d-block w-100" alt="..." />
         </div>
       </div>
       <button
@@ -530,16 +530,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="13.jpg" /></label>
+            <label for="popup"><img src="images/13.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="13.jpg" />
+                <img src="images/13.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="13.jpg" /></a>
+                      <a href="#"><img src="images/13.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -601,16 +601,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="8.jpg" /></label>
+            <label for="popup"><img src="images/8.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="8.jpg" />
+                <img src="images/8.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="8.jpg" /></a>
+                      <a href="#"><img src="images/8.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -669,16 +669,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="9.jpg" /></label>
+            <label for="popup"><img src="images/9.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="9.jpg" />
+                <img src="images/9.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="9.jpg" /></a>
+                      <a href="#"><img src="images/9.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -733,16 +733,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="10.jpg" />
+                <img src="images/10.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="10.jpg" /></a>
+                      <a href="#"><img src="images/10.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -799,16 +799,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="11.jpg" /></label>
+            <label for="popup"><img src="images/11.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="11.jpg" />
+                <img src="images/11.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="11.jpg" /></a>
+                      <a href="#"><img src="images/11.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -865,16 +865,16 @@
         <ul class="cards-list">
           <li>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="12.jpg" /></label>
+            <label for="popup"><img src="images/12.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -941,16 +941,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1011,16 +1011,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="8.jpg" /></label>
+            <label for="popup"><img src="images/8.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1078,16 +1078,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="13.jpg" /></label>
+            <label for="popup"><img src="images/13.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1145,16 +1145,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1212,16 +1212,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="9.jpg" /></label>
+            <label for="popup"><img src="images/9.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1281,16 +1281,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="13.jpg" /></label>
+            <label for="popup"><img src="images/13.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1348,16 +1348,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1418,16 +1418,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1488,16 +1488,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images/12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
@@ -1558,16 +1558,16 @@
       <div class="photo-card">
         <div>
             <input type="checkbox" id="popup" />
-            <label for="popup"><img src="10.jpg" /></label>
+            <label for="popup"><img src="images/10.jpg" /></label>
             <div>
               <!-- 모달창 -->
               <div class="modalbox">
                 <label for="popup"><i class="fas fa-times"></i></label>
-                <img src="12.jpg" />
+                <img src="images/12.jpg" />
                 <div class="modal-wrapper">
                   <div class="modal-leftbox">
                     <div class="modal-item">
-                      <a href="#"><img src="12.jpg" /></a>
+                      <a href="#"><img src="images12.jpg" /></a>
                     </div>
                     <div class="modal-score">
                       <div>
